[metadata]
name = cornellGrading
version = attr: cornellGrading.__version__
url = https://github.com/dsavransky/grading
author = Dmitry Savransky
author_email = ds264@cornell.edu
description = Routines for interacting with Cornell installations of Canvas and Qualtrics
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
classifiers=
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = cornellGrading
install_requires =
    requests
    numpy
    pandas
    keyring
    canvasapi
    pytz
python_requires = >= 3.7
scripts =
    scripts/canvastex.py
    scripts/dueDatesFromCSV.py
    scripts/matlabgrader.py
    scripts/setupSelfGrading.py
    scripts/upload_MC_questions.py

[options.extras_require]
latex2html =  pdf2image; Pillow
cornellInterface = console-menu; bullet
